# p03

./: .gitignore  AGENTS.md  CLAUDE.md  pyproject.toml
data/: d3d04_all_test_r.csv  m2_0914_r_all_test.csv  m2_lhs_0916_test.csv  m2_lhs_0916_train.csv  temp_delta_2_span.json
data/augmented/: dt_24hours_data_1.csv  dt_24hours_data_1_noise3.csv  dt_24hours_data_1_noise5.csv  dt_24hours_data_2.csv  dt_24hours_data_2_noise3.csv  dt_24hours_data_2_noise5.csv  dt_24hours_data_3.csv  dt_24hours_data_3_noise3.csv  dt_24hours_data_3_noise5.csv  dt_24hours_data_new.csv  dt_24hours_data_new2.csv
docs/: 2d_fit_command.md  3d_model.md  FIT_MULTI_CASE_FINAL_REPORT.md  dt_24.md  fit_multi_case_performance_summary.md  fixed_kv_usage.md  gp_baseline_usage.md  gp_implementation_plan.md  gp_mt_icm_results.md  multi_file_fitting.md  performance_optimization.md
scripts/: run_multi_file_fit.sh
src/bridge/: mechanics.py
src/data/: add_data_perturbation.py  bridge_reaction_sampling.py  generate_custom_bridge_params.py  noise_utils.py  temp_delta_24h_4.json  temp_delta_24h_new2.json  temp_delta_24h_new3.json
src/models/: bridge_2d_fit.py  bridge_forward_model.py  bridge_nn.py  f_forward.py  fit_multi_case.py  fit_multi_case_optimized.py  fit_multi_case_v2.py  fit_params_demo.py  fit_real_data_demo.py  hparam_search_rev03.py  model_val.py  parameter_fitter.py  rev03_rtd_nf_e3_tree.py
src/models/bridge_fitting/: __init__.py  (+9 more)
tests/: test_columns.py  test_gp_pca.py  test_gp_uncertainty.py  test_parameter_fitter.py  test_residual_equivalence.py  test_svgp_cli.py  test_v2_correctness.py
(+24 files in other folders)
